# simple_template

./: Cargo.toml  cargo-generate.toml  config.toml
config/: config.toml
src/: config.rs  logger.rs  main.rs
