[package]
name = "simple_template"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
eyre = "0.6.12"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
color-eyre = "0.6.3"
